package com.taodongdong.ecommerce;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class ProductDetails extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_product_details);
    }
}
