package com.taodongdong.ecommerce.api;

public class StoreInfo {
    public int id;
    public int merchantUserId;
    public String storeName;
}
