package com.taodongdong.ecommerce.api;

public class UserInfo {
    public int id;
    public String username;
    public int authority;
    public int balance;
}
