@startuml

title __APP's Class Diagram__\n

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.AbstractActivity {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.BuildConfig {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.HomeActivity {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.MainActivity {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.MainApplication {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.ProductDetails {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.RegisterPage {
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      abstract class com.taodongdong.ecommerce.api.AbstractApiClient {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      interface com.taodongdong.ecommerce.api.ApiCallback {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.ApiClient {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.Errors {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.OrderInfo {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.Page {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.ProductInfo {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.StoreInfo {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace api {
      class com.taodongdong.ecommerce.api.UserInfo {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace prouctlistview {
      class com.taodongdong.ecommerce.prouctlistview.ProductItem {
      }
    }
  }
  

  namespace com.taodongdong.ecommerce {
    namespace prouctlistview {
      class com.taodongdong.ecommerce.prouctlistview.ProductListAdapter {
      }
    }
  }
  

  com.taodongdong.ecommerce.AbstractActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.taodongdong.ecommerce.HomeActivity .up.|> android.view.View.OnClickListener
  com.taodongdong.ecommerce.HomeActivity -up-|> com.taodongdong.ecommerce.AbstractActivity
  com.taodongdong.ecommerce.HomeActivity o-- com.taodongdong.ecommerce.prouctlistview.ProductListAdapter : myshopAdapter
  com.taodongdong.ecommerce.HomeActivity o-- com.taodongdong.ecommerce.prouctlistview.ProductListAdapter : plAdapter
  com.taodongdong.ecommerce.MainActivity -up-|> com.taodongdong.ecommerce.AbstractActivity
  com.taodongdong.ecommerce.MainActivity o-- com.taodongdong.ecommerce.MainActivity.MyAsyncTask : mat
  com.taodongdong.ecommerce.MainApplication -up-|> android.app.Application
  com.taodongdong.ecommerce.MainApplication o-- com.taodongdong.ecommerce.api.ApiClient : apiClient
  com.taodongdong.ecommerce.ProductDetails -up-|> androidx.appcompat.app.AppCompatActivity
  com.taodongdong.ecommerce.RegisterPage .up.|> android.view.View.OnClickListener
  com.taodongdong.ecommerce.RegisterPage -up-|> com.taodongdong.ecommerce.AbstractActivity
  com.taodongdong.ecommerce.api.ApiClient -up-|> com.taodongdong.ecommerce.api.AbstractApiClient
  com.taodongdong.ecommerce.prouctlistview.ProductListAdapter -up-|> android.widget.ArrayAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
